# SuperSuat

./: .gitignore  .gitmodules  README.md  docker-compose.yml  package.json
.github/workflows/: azure-static-web-apps-lemon-mud-0a871ea00.yml  main_suat.yml
Back/: README.md  pyproject.toml  sample_ocr.json
Back/Suat/DataControl/: ArticlesTable.py  FirestoreUploader.py
Back/Suat/Ocr/: DoclingProcessor.py  OriginData.py  ResponseExtraction.py
Back/ocr/: __init__.py  __main__.py  config.py  exporters.py  models.py  processor.py
Back/sample_data/: extracted_data.json
DataProcessor/: README.md  main.py  pyproject.toml
Docs/: ClassDiagram.md  DataModel.md  DataStructure.md  Requirements.md  SequenceDiagram.md
Front/: index.html  package-lock.json  package.json  pnpm-lock.yaml
Front/public/: ocr.json
Front/src/: App.tsx
Front/src/components/: Footer.tsx  Header.tsx  PdfPageRenderer.tsx  PdfParagraphOverlayer.README.md  PdfParagraphOverlayer.tsx
Front/src/scripts/: FirebaseClient.ts  OcrData.ts  OriginData.ts  Session.ts
Front/src/types/: fonts.d.ts  pdfjs-worker.d.ts
Server/: README.md  pyproject.toml
Server/OcrModule/: Ocr.py
Server/OcrModule/PaddleOcrVl/: Ocr.py
Uploader/: .gitignore  README.md  pyproject.toml  template.env
Uploader/OcrModule/: Ocr.py  OcrSchema.py
Uploader/OcrModule/GlmOcr/: Ocr.py
Uploader/OcrModule/LlmAgent/: State.py
Uploader/OcrModule/LlmAgent/AnalysisAndOcrFlow/: Agents.py  AnalysisCrew.py  AnalysisNode.py  Clients.py  CommonSchemas.py  CommonTools.py  Crews.py  OcrCrew.py  SingleAnalysisCrew.py  State.py  States.py  Tasks.py  Tools.py
Uploader/OcrModule/LlmAgent/AnalysisAndOcrFlow/Nodes/: Analyst.py  PageChecker.py
Uploader/OcrModule/PaddleOcrVl/: Ocr.py
Uploader/Test/Manual/Ocr/: test_glm_ocr.py  test_paddle_ocr_vl.py
Uploader/Test/Manual/Ocr/LlmAgent/AnalysisAndOcrFlow/: Analyst.py
backend/: Dockerfile  SuperSuat.slnx
backend/src/SuperSuat.Api/: DictionaryExtensions.cs  SuperSuat.Api.csproj
backend/src/SuperSuat.Application/: SuperSuat.Application.csproj
backend/src/SuperSuat.Infrastructure/: DependencyInjection.cs  SuperSuat.Infrastructure.csproj
frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
(+85 files in other folders)
