[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.0.0",
    "paddlepaddle>=3.0.0",
    "paddlex[multimodal]>=3.0.0",
    "pymupdf>=1.27.2.3",
    "pypdfium2<5",
]

[tool.uv]
override-dependencies = [
    "pypdfium2<5",
]
