[project]
name = "uploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.0.0",
    "paddlepaddle-gpu==3.2.2",
    "paddlex[multimodal]>=3.0.0",
    "pymupdf>=1.27.2.3",
    "pypdfium2<5",
]

[tool.uv]
override-dependencies = [
    "pypdfium2<5",
]

[[tool.uv.index]]
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu118/"
explicit = true

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddlepaddle" }
