[project]
name = "uploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "black>=26.3.1",
    "langchain-aws>=1.4.6",
    "langgraph>=1.1.10",
    "pillow>=11.0.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.3",
]
